fix: solve two bugs in list